# optitrack_vrpn

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml
include/optitrack_ros/: optitrack_ros.h  time_manager.h  tracker_handler.h
include/optitrack_vrpn/: optitrack_vrpn.h  time_manager.h  tracker_handler.h
src/: optitrack_ros_node.cpp  optitrack_vrpn_node.cpp
src/optitrack_ros/: optitrack_ros.cpp  time_manager.cpp  tracker_handler.cpp
src/optitrack_vrpn/: optitrack_vrpn.cpp  time_manager.cpp  tracker_handler.cpp
tools/: analyze_timestamps.py  prerelease_test.py
