<?xml version="1.0"?>
<package format="2">
  <name>optitrack_ros</name>
  <version>0.0.0</version>
  <description>ROS client for streaming rigid-body data from OptiTrack Motive via VRPN</description>

  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/optitrack_ros</url>
  <url type="repository">https://github.com/byu-magicc/optitrack_ros.git</url>
  <url type="bugtracker">https://github.com/byu-magicc/optitrack_ros/issues</url>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>vrpn</depend>
</package>
